# openclaw-desktop-assistant

./: .gitignore  README.md  READY_FOR_UPLOAD.md  build_output.txt  index.html  package-lock.json  package.json
automation/: linkedin_agent.js
src/: App.jsx
src-tauri/: Cargo.toml  jobs.csv  tauri.conf.json
src-tauri/.puppeteer_user_data/: DevToolsActivePort  Last Browser  Local State  first_party_sets.db
src-tauri/.puppeteer_user_data/CertificateRevocation/10352/: manifest.fingerprint
src-tauri/.puppeteer_user_data/Default/: DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data
src-tauri/.puppeteer_user_data/Default/DawnGraphiteCache/: data_1  index
src-tauri/.puppeteer_user_data/Default/DawnWebGPUCache/: data_1  index
src-tauri/.puppeteer_user_data/GrShaderCache/: data_1  index
src-tauri/.puppeteer_user_data/GraphiteDawnCache/: data_0  data_1  data_2  f_000001  f_000002  f_000004  f_000006  f_000008  f_00000a  f_00000b  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000014  f_000016  f_000017  f_000019  f_00001b  f_00001c  f_00001f  index
src-tauri/.puppeteer_user_data/Profile 1/: DIPS  MediaDeviceSalts  Preferences  Secure Preferences  Translate Ranker Model  Visited Links  Web Data  trusted_vault.pb
src-tauri/.puppeteer_user_data/ShaderCache/: data_1  index
src-tauri/.puppeteer_user_data/System Profile/: Preferences  Secure Preferences
src-tauri/.puppeteer_user_data/segmentation_platform/: ukm_db-wal
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+1932 files in other folders)
