[package]
name = "openclaw-desktop"
version = "1.0.0"
description = "OpenClaw Desktop Assistant"
authors = ["Personaliz.ai Assignment"]
edition = "2021"

[lib]
name = "openclaw_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
